--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ html {
   bottom: 20px;
   right: 20px;
   z-index: 99;
-  font-size: 18px;
+  font-size: 16px;
   border: none;
   outline: none;
   background-color: #800020;
@@ -195,7 +195,7 @@ html {
 }
 
 #myBtn:hover {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(56, 41, 41);
 }
 #myBtn:after {
   content: " \21E1";
@@ -719,7 +719,7 @@ blockquote cite:before {
   justify-content: center;
   height: auto;
   width: 100%;
-  color: #800020;
+  color: black;
 }
 
 .footer-words {
