--- a/css/style.css
+++ b/css/style.css
@@ -397,10 +397,22 @@ hr {
   margin-bottom: 5rem;
 }
 
+.carousel.square {
+  position: relative;
+  height: 1000px !important;
+  width: 1000px !important;
+  margin: 0 auto;
+  margin-bottom: 10rem;
+  width: 100%;
+}
+
+.carousel-image.square {
+
+}
+
 .carousel-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 .carousel-track-container {
@@ -678,11 +690,9 @@ blockquote cite:before {
 }
 
 .contact-main {
-
 }
 
 .contact {
-
 }
 
 .email-contact {
