--- a/css/mobile.css
+++ b/css/mobile.css
@@ -256,7 +256,11 @@
   }
 
   .boy-fraternity-div p {
-    font-family: "Roboto Mono", monospace;
+
+  }
+
+  .thelastburial-paragraph {
+ font-family: "Roboto Mono", monospace;
     font-weight: 500;
     line-height: 2rem;
     font-size: 16px;
