--- a/css/mobile.css
+++ b/css/mobile.css
@@ -117,15 +117,19 @@
   }
 
   .biography-section {
-    font-family: "Roboto Mono", monospace;
-    font-size: 16px;
-    font-weight: 500;
     max-width: 350px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .biography {
+    font-family: "Roboto Mono", monospace;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 2rem;
   }
 
   .bio-image {
@@ -255,12 +259,8 @@
     position: relative;
   }
 
-  .boy-fraternity-div p {
-
-  }
-
   .thelastburial-paragraph {
- font-family: "Roboto Mono", monospace;
+    font-family: "Roboto Mono", monospace;
     font-weight: 500;
     line-height: 2rem;
     font-size: 16px;
