--- a/css/mobile.css
+++ b/css/mobile.css
@@ -117,8 +117,7 @@
   }
 
   .biography-section {
-    max-width: 350px;
-    margin: 0 auto;
+   width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -126,6 +125,8 @@
   }
 
   .biography {
+    max-width: 350px;
+     margin: 0 auto;
     font-family: "Roboto Mono", monospace;
     font-size: 16px;
     font-weight: 500;
@@ -248,8 +249,7 @@
 
 @media screen and (max-width: 450px) {
   .boy-fraternity-div {
-    max-width: 350px;
-    margin: 0 auto;
+    width: 100%;
     position: relative;
   }
 
@@ -264,6 +264,8 @@
     font-weight: 500;
     line-height: 2rem;
     font-size: 16px;
+    max-width: 350px;
+    margin: 0 auto;
   }
 
   .boy-fraternity-title.boys::after {
