--- a/css/mobile.css
+++ b/css/mobile.css
@@ -13,12 +13,14 @@
   .logo-link {
     display: inline-block;
     width: 30%;
+    align-items: center;
   }
 
   .navbar {
     flex-direction: column;
     position: relative;
     padding: 5px;
+
   }
   .menu div {
     margin-bottom: 5px;
@@ -27,7 +29,8 @@
     display: block;
     position: absolute;
     right: 15px;
-    top: 40px;
+    top: 35px;
+
   }
 
   .list-item {
