--- a/css/style.css
+++ b/css/style.css
@@ -503,15 +503,18 @@ hr {
 .bottom-line {
   margin-top: 3rem;
 }
-.boy-fraternity-div {
+
+
+.boy-fraternity-div{
   font-family: "Roboto Mono", monospace;
-  font-weight: 600;
   font-size: 16px;
+  font-weight: 500;
   max-width: 800px;
   margin: 0 auto;
-  position: relative;
-  padding: 10px;
-  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .boy-fraternity-title {
