--- a/css/tablet.css
+++ b/css/tablet.css
@@ -26,32 +26,184 @@
   }
 }
 
-@media all and (max-width: 1020px) {
+@media screen and (max-width: 820px) {
 }
 
 /* End of Biography */
 
 /* Navbar */
 
+@media screen and (max-width: 820px) {
+    .contact-container {
+    max-width: 750px;
+    margin: 0 auto;
+    height: auto;
+    flex-direction: column;
+  }
 
+  .image-div {
+    max-width: 350px;
+    margin: 0 auto;
+    margin-top: 2rem;
+  }
 
-@media all and (max-width: 820px) {
- 
-
+  .contact-main {
+    max-width: 350px;
+    margin: 0 auto;
+  }
 }
 
 
+/* Navbar  */
 
-/* Contact Page */
-
-@media only screen and (max-width: 820px) {
-  .contact-container {
-   
+@media only screen and (max-width: 1200px){
+   .App-logo {
+    cursor: pointer;
+    max-width: 100px;
+    margin: 0 auto;
+    margin-left: 2rem;
+    margin-top: 2.5rem;
+    display: inline;
   }
 
-
+  .logo-link {
+    display: inline-block;
+    width: 30%;
+    align-items: center;
   }
 
+  .navbar {
+    flex-direction: column;
+    position: relative;
+    padding: 5px;
+    width: 100%;
+  }
+  .menu div {
+    margin-bottom: 5px;
+  }
+  .menu {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 35px;
+  }
+
+  .list-item {
+    display: block;
+    padding: 20px 10px;
+  }
+
+  .nav-list {
+    position: relative;
+    list-style-type: none;
+    margin: 0 auto;
+    text-align: center;
+    padding: 1%;
+    margin-top: 8%;
+    display: none;
+  }
+
+  .list-item.contact a {
+    background-color: rgb(231, 231, 17);
+    border: none;
+    color: black;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 16px;
+  }
+
+  .active {
+    display: block;
+  }
+
+  .extra {
+    display: none;
+  }
+}
+
+
+@media screen and (max-width: 820px) {
+  .App-logo {
+    cursor: pointer;
+    max-width: 100px;
+    margin: 0 auto;
+    margin-left: 2rem;
+    margin-top: 2.5rem;
+    display: inline;
+  }
+
+  .logo-link {
+    display: inline-block;
+    width: 30%;
+    align-items: center;
+  }
+
+  .navbar {
+    flex-direction: column;
+    position: relative;
+    padding: 5px;
+    width: 100%;
+  }
+  .menu div {
+    margin-bottom: 5px;
+  }
+  .menu {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 35px;
+  }
+
+  .list-item {
+    display: block;
+    padding: 20px 10px;
+  }
+
+  .nav-list {
+    position: relative;
+    list-style-type: none;
+    margin: 0 auto;
+    text-align: center;
+    padding: 1%;
+    margin-top: 8%;
+    display: none;
+  }
+
+  .list-item.contact a {
+    background-color: rgb(231, 231, 17);
+    border: none;
+    color: black;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 16px;
+  }
+
+  .active {
+    display: block;
+  }
+
+  .extra {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+ .bio-image-laptop {
+   width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  height: auto;
+  padding: 5px;
+}
+}
 
 /* End of Contact Page */
 
@@ -80,8 +232,27 @@
   }
 }
 
-@media screen and (max-width: 820px) {
- 
+@media screen and (max-width: 1200px) {
+    .exhibitions-info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    height: auto;
+    width: 720px;
+  }
+
+  .exhibitions-info section {
+    display: flex;
+    flex-direction: column;
+    max-width: 310px;
+    margin: 0 auto;
+  }
+
+  .exhibitions-info section div {
+    margin-bottom: 2rem;
+    padding-left: 0.5rem;
+  }
 }
 
 /* End of Exhibition Page */
