--- a/css/style.css
+++ b/css/style.css
@@ -401,23 +401,22 @@ hr {
 .carousel.potrait {
   position: relative;
   height: 800px !important;
-  width: 100%;
-  max-width: 600px !important;
+  width: 600px !important;
   margin: 0 auto;
   margin-bottom: 5rem;
 }
 
 .carousel-image.potrait {
+  width: 100%;
   height: 100%;
 }
 
 .carousel.square {
   position: relative;
-  height: 1000px !important;
   width: 1000px !important;
+  height: 1000px !important;
   margin: 0 auto;
   margin-bottom: 10rem;
-  width: 100%;
 }
 
 .carousel-image.square {
