--- a/css/style.css
+++ b/css/style.css
@@ -386,7 +386,6 @@ hr {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 1440px;
   width: 100%;
   height: 100vh;
 }
@@ -403,27 +402,30 @@ hr {
   position: relative;
   height: 800px !important;
   width: 600px !important;
+  width: 100%;
   margin: 0 auto;
   margin-bottom: 5rem;
 }
 
 .carousel-image.potrait {
-  width: 100%;
   height: 100%;
 }
 
 .carousel.square {
   position: relative;
-  width: 1000px !important;
-  max-width: fit-content;
-  height: 1000px !important;
+  width: 100%;
+  max-width: 1000px !important;
+  max-height: 1000px !important;
+  height: 100%;
   margin: 0 auto;
   margin-bottom: 10rem;
 }
 
 .carousel-image.square {
-  width: 100%;
-  height: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  height: auto;
+
 }
 
 .carousel-image {
