--- a/css/keeper.css
+++ b/css/keeper.css
@@ -32,8 +32,10 @@ html {
 
 .App-logo {
   pointer-events: auto;
-  width: 100px;
-  height: auto;
+  width: 100%;
+  max-width: 100px;
+  height: 100%;
+  max-height: 50px;
   margin-left: 5rem;
   cursor: pointer;
   margin-top: 3rem;
@@ -226,7 +228,7 @@ html {
   width: 100%;
   max-width: 1200px;
   height: 100%;
-
+  max-height: 800px;
   margin: 0 auto;
   margin-bottom: 4rem;
 }
