--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ html {
 .landing-page img {
   width: 100%;
   max-width: 1200px;
-  height: 100%;
+  height: 800px;
   max-height: 800px;
   margin: 0 auto;
   margin-bottom: 4rem;
@@ -801,6 +801,7 @@ blockquote cite:before {
   min-width: 130px;
   height: 40px;
   color: #800020;
+  font-size: 20px;
   padding: 10px 15px;
   font-weight: bold;
   cursor: pointer;
@@ -812,6 +813,7 @@ blockquote cite:before {
   border-radius: 5px;
   border: none;
   background-color: #fbfdff;
+  text-decoration: none;
 }
 .css-button-arrow--black:hover {
   border-radius: 5px;
