--- a/css/tablet.css
+++ b/css/tablet.css
@@ -3,6 +3,35 @@
 /* Biography */
 
 @media all and (max-width: 1020px) {
+  ::-webkit-scrollbar {
+    width: 1em;
+  }
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 100vw;
+    margin-block: 0.5em;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #f1f1f1;
+    border: 0.25em solid black;
+    border-radius: 100vw;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #800020;
+    border: 0.25em solid rgb(15, 15, 15);
+  }
+
+  @supports (scrollbar-color: red blue) {
+    * {
+      scrollbar-color: #f1f1f1 #800020;
+      scrollbar-width: thin;
+    }
+  }
+}
+
+@media all and (max-width: 1020px) {
   .biography-section {
     max-width: 100%;
     margin: 0 auto;
@@ -34,7 +63,7 @@
 /* Navbar */
 
 @media screen and (max-width: 820px) {
-    .contact-container {
+  .contact-container {
     max-width: 750px;
     margin: 0 auto;
     height: auto;
@@ -53,11 +82,10 @@
   }
 }
 
-
 /* Navbar  */
 
-@media only screen and (max-width: 1200px){
-   .App-logo {
+@media only screen and (max-width: 1200px) {
+  .App-logo {
     cursor: pointer;
     max-width: 100px;
     margin: 0 auto;
@@ -124,7 +152,6 @@
     display: none;
   }
 }
-
 
 @media screen and (max-width: 820px) {
   .App-logo {
@@ -196,13 +223,13 @@
 }
 
 @media only screen and (max-width: 1200px) {
- .bio-image-laptop {
-   width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-  height: auto;
-  padding: 5px;
-}
+  .bio-image-laptop {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    height: auto;
+    padding: 5px;
+  }
 }
 
 /* End of Contact Page */
@@ -233,7 +260,7 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .exhibitions-info {
+  .exhibitions-info {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
