--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,88 @@
 @import url("https://fonts.googleapis.com/css2?family=Merienda+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap");
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Reset margins */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+figure,
+picture {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-weight: 400;
+}
+
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+}
+
+/* set up the body */
+body {
+  font-family: "Roboto Mono", monospace;
+  font-size: 16px;
+  line-height: 1.5;
+  min-height: 100vh;
+  overflow-x: hidden;
+}
+
+/* make images easier to work with */
+img,
+picutre {
+  max-width: 100%;
+  display: block;
+}
+
+/* make form elements easier to work with */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* remove animations for people who've turned them off */
+@media (prefers-reduced-motion: reduce) {
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
 
 ::-webkit-scrollbar {
   width: 1em;
 }
+
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
   border-radius: 100vw;
   margin-block: 0.5em;
 }
-
-
 
 ::-webkit-scrollbar-thumb {
   background: #f1f1f1;
@@ -21,28 +92,16 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background: #800020;
-   border: 0.25em solid rgb(15, 15, 15);
+  border: 0.25em solid rgb(15, 15, 15);
 }
 
 @supports (scrollbar-color: red blue) {
-* {
-  scrollbar-color: #f1f1f1 #800020;
-  scrollbar-width: thin;
-}
-}
-
-
-
-body {
-  background-color: #ffffff;
-  font-family: "Roboto Mono", monospace;
-  max-width: 1440px;
-  margin: 0 auto;
+  * {
+    scrollbar-color: #f1f1f1 #800020;
+    scrollbar-width: thin;
+  }
 }
 
-* {
-  box-sizing: border-box;
-}
 
 html {
   scroll-behavior: smooth;
@@ -50,24 +109,25 @@ html {
 
 /* Navbar */
 
+.header {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 .navbar {
   font-family: "Roboto Mono", monospace;
-  font-weight: 500;
   display: flex;
   margin: 0 auto;
   padding-top: 10px;
   position: fixed;
   top: 0;
   z-index: 1;
-  background-color: rgb(255, 255, 255);
 }
 
 .App-logo {
   pointer-events: auto;
-  width: 100%;
   max-width: 100px;
-  height: 100%;
-  max-height: 50px;
+  height: auto;
   margin-left: 5rem;
   cursor: pointer;
   margin-top: 3rem;
@@ -77,37 +137,6 @@ html {
   width: 40px;
   height: 40px;
 }
-/* Navbar Links 
-
-.App-logo:hover {
-  animation: App-logo-scale 0.5s ease-in;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 5s linear;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes App-logo-scale {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(1.2);
-  }
-}
-
-*/
 
 .nav-list {
   list-style-type: none;
@@ -125,11 +154,6 @@ html {
   margin-left: 1rem;
 }
 
-.list-item a {
-  text-decoration: none;
-  position: relative;
-  font-size: 16px;
-}
 
 .list-item a::after {
   content: "";
@@ -152,12 +176,14 @@ html {
 .list-item.extra {
   transition: transform 250ms;
 }
+
 .list-item.extra:hover {
   transform: scale(1.1);
   transition: transform 250ms;
 }
 
 .list-item a {
+  position: relative;
   color: black;
   text-decoration: none;
   font-weight: 900;
@@ -209,9 +235,11 @@ html {
 .toggle .menu-line1 {
   transform: rotate(-45deg) translate(-5px, 6px);
 }
+
 .toggle .menu-line2 {
   opacity: 0;
 }
+
 .toggle .menu-line3 {
   transform: rotate(45deg) translate(-5px, -6px);
 }
@@ -236,6 +264,7 @@ html {
 #myBtn:hover {
   background-color: rgb(56, 41, 41);
 }
+
 #myBtn:after {
   content: " \21E1";
 }
@@ -294,13 +323,13 @@ main {
 .biography-section {
   font-family: "Roboto Mono", monospace;
   font-size: 16px;
-  font-weight: 500;
   max-width: 800px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 2rem;
 }
 
 .bio-image {
@@ -319,10 +348,11 @@ main {
 }
 
 .biography-title {
-  font-size: 2rem;
+  font-size: 30px;
   text-align: center;
   color: #800020;
   position: relative;
+  margin-top: 2rem;
 }
 
 .biography-title:hover {
@@ -349,34 +379,40 @@ main {
   transform-origin: left;
 }
 
+.biography {
+  font-size: 16px;
+}
+
 /* Exhibition Page */
 
+.exhibition-container {
+  background-color: inherit;
+
+}
+
 .exhibitions-info {
-  font-family: "Roboto Mono", monospace;
   display: flex;
   flex-direction: row;
   max-width: 1440px;
   margin: 0 auto;
-  height: auto;
-  margin-bottom: 10rem;
-  margin-top: 10rem;
-  display: relative;
+  gap: 1rem;
+  position: relative;
+  padding: 2.5rem;
 }
 
-.exhibitions-info section {
+
+.exhibitions {
   display: flex;
   flex-direction: column;
   max-width: 310px;
+  gap: 2px;
   margin: 0 auto;
-}
-
-.exhibitions-info section div {
-  margin-bottom: 2rem;
   padding-left: 0.5rem;
 }
 
-.exhibitions-info section div:hover {
+.exhibitions:hover {
   border-left: 2px solid currentColor;
+  border-bottom: 2px solid #800020;
 }
 
 .exhibitions-info section p {
@@ -385,29 +421,24 @@ main {
 }
 
 .exhibition-year {
-  font-size: 2rem;
-  font-weight: 900;
-  margin-bottom: 1rem;
-  color: #800020;
+  font-size: 22px;
+  margin-bottom: 2rem !important;
+  color: black;
+  text-decoration: underline;
+  padding-left: 1rem;
 }
 
 .exhibition-title {
-  font-size: 1.7rem;
-  font-weight: 900;
+  font-size: 20px;
   margin-bottom: 1.5rem;
+  text-decoration: none;
 }
 
-.exhibition-venue {
-  font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 1rem;
+.exhibition-title a {
+  text-decoration: none;
+  color: #800020;
 }
 
-.exhibition-location {
-  font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 2rem;
-}
 
 .exhibition-location.link {
   text-decoration: none;
@@ -446,12 +477,15 @@ hr {
   margin-bottom: 10rem;
 }
 
+.main-exhibition.square {
+  height: 100vh !important;
+}
+
 #carousel-square {
   position: relative;
   height: 600px !important;
   width: 600px !important;
   margin: 0 auto;
-  margin-bottom: 10rem;
 }
 
 .carousel-image {
@@ -531,6 +565,7 @@ hr {
 .mobile {
   display: none;
 }
+
 /* Project Individual Page */
 .topline {
   margin-bottom: 3rem;
@@ -541,15 +576,14 @@ hr {
 }
 
 .boy-fraternity-div {
-  font-family: "Roboto Mono", monospace;
-  font-size: 16px;
-  font-weight: 500;
   max-width: 800px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 2rem;
+  padding-top: 1.5rem;
 }
 
 .boy-fraternity-title {
@@ -577,6 +611,7 @@ hr {
 }
 
 .thelastburial-paragraph {
+  font-family: "Roboto Mono", monospace;
   line-height: 2rem;
 }
 
@@ -584,63 +619,73 @@ hr {
 
 .blockquote-div {
   max-width: 800px;
+  height: 350px;
   margin: 0 auto;
   position: relative;
   padding: 50px;
+
 }
 
 blockquote {
-  font-family: "Roboto Mono", monospace;
-  font-size: 16px;
   position: relative;
   padding: 40px;
   text-align: center;
+  max-width: 620px;
+  height: 200px;
 }
-/* Thanks: http://callmenick.com/post/styling-blockquotes-with-css-pseudo-classes */
+
 blockquote:before {
-  font-family: "Roboto Mono", monospace;
   position: absolute;
-  font-size: 8em;
+  font-size: 100px;
   line-height: 1;
   top: 0;
   left: 0;
   content: "\201C";
   color: #800020;
 }
+
 blockquote:after {
   font-family: "Roboto Mono", monospace;
   position: absolute;
-  /* display: block; don't use this, it raised the quote too high from the bottom - defeated line-height? */
   float: right;
-  font-size: 8em;
+  font-size: 100px;
   line-height: 1;
   right: 0;
-  bottom: -0.5em;
+  bottom: -0.3em;
   content: "\201D";
-  color: #800020;
 }
+
 .blockquote-footer {
-  padding: 1em;
-  color: #800020;
-  font-size: 1.2rem;
-  font-weight: 900;
+  padding: 1rem;
   position: absolute;
-  bottom: 0;
+  bottom: 20px;
   right: 0;
 }
+
+.projectnames {
+  color: #800020;
+  text-decoration: none;
+  font-weight: 900;
+}
+
+/* 
 
 .blockquote-link {
   text-decoration: none;
   color: black;
 }
-
 .jumbotron-button {
-  color: #800020;
+
   text-decoration: none;
 }
 
-blockquote cite:before {
+*/
+
+
+.projectnames:before {
+  color: black;
   content: "\2013";
+  margin-right: 0.5rem;
 }
 
 /* Project Page Contact Card */
@@ -704,6 +749,31 @@ blockquote cite:before {
   transform-origin: left;
 }
 
+/* Videos */
+
+.video-main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  max-width: 1440px;
+  margin: 0 auto;
+  gap: 5rem;
+}
+
+.video-container {
+  background-color: #800020;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+iframe {
+  width: 700px;
+  height: 400px;
+}
+
 /* Contact Page */
 
 .contact-container {
@@ -734,26 +804,19 @@ blockquote cite:before {
   max-width: 350px;
 }
 
-.contact-main {
-}
-
-.contact {
+.namename {
+  color: #800020;
+  font-weight: 900;
 }
 
 .email-contact {
   text-decoration: none;
   color: #800020;
-  font-size: 16px;
   font-weight: 900;
   margin-bottom: 1rem;
 }
 
-.phone-contact {
-  text-decoration: none;
-  color: #800020;
-  font-size: 16px;
-  font-weight: 900;
-}
+
 
 /* Footer */
 
@@ -816,6 +879,7 @@ blockquote cite:before {
 .error-icon {
   margin-bottom: 5%;
 }
+
 .errorimage {
   max-width: 600px;
   margin: 0 auto;
@@ -845,15 +909,18 @@ blockquote cite:before {
   background-color: #fbfdff;
   text-decoration: none;
 }
+
 .css-button-arrow--black:hover {
   border-radius: 5px;
   padding-right: 8px;
   padding-left: 24px;
 }
+
 .css-button-arrow--black:hover:after {
   opacity: 1;
   left: 10px;
 }
+
 .css-button-arrow--black:after {
   content: "\00AB";
   position: absolute;
