--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Merienda+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap");
 
 *,
@@ -115,7 +114,6 @@ html {
 }
 
 .navbar {
-  font-family: "Roboto Mono", monospace;
   display: flex;
   margin: 0 auto;
   padding-top: 10px;
@@ -251,14 +249,13 @@ html {
   bottom: 20px;
   right: 20px;
   z-index: 99;
-  font-size: 16px;
   border: none;
   outline: none;
   background-color: #800020;
-  color: whitesmoke;
+  color: white;
   cursor: pointer;
   padding: 10px;
-  border-radius: 0px;
+  border-radius: 5px;
 }
 
 #myBtn:hover {
@@ -267,6 +264,7 @@ html {
 
 #myBtn:after {
   content: " \21E1";
+  font-size: 20px;
 }
 
 /* Landing Page */
@@ -309,7 +307,6 @@ main {
 /* About Me Page */
 
 .about-page {
-  font-family: "Roboto Mono", monospace;
   max-width: 1200px;
   margin: 0 auto;
   height: auto;
@@ -321,7 +318,6 @@ main {
 }
 
 .biography-section {
-  font-family: "Roboto Mono", monospace;
   font-size: 16px;
   max-width: 800px;
   margin: 0 auto;
@@ -452,7 +448,6 @@ hr {
 /* Carousel */
 
 .main-exhibition {
-  font-family: "Roboto Mono", monospace;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -611,8 +606,11 @@ hr {
 }
 
 .thelastburial-paragraph {
-  font-family: "Roboto Mono", monospace;
   line-height: 2rem;
+}
+
+.linktocontinuation {
+  color: #800020;
 }
 
 /* Projects Page */
@@ -645,7 +643,6 @@ blockquote:before {
 }
 
 blockquote:after {
-  font-family: "Roboto Mono", monospace;
   position: absolute;
   float: right;
   font-size: 100px;
@@ -691,7 +688,6 @@ blockquote:after {
 /* Project Page Contact Card */
 
 .card-container {
-  font-family: "Roboto Mono", monospace;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -706,6 +702,9 @@ blockquote:after {
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   max-width: 350px;
   height: auto;
   margin: 10px;
@@ -714,7 +713,15 @@ blockquote:after {
 .card-image {
   width: 100%;
   height: auto;
+  opacity: 0.5;
 }
+
+.card-image:hover {
+  opacity: 1;
+  border: 2px solid #800020;
+
+}
+
 
 .card-description {
   text-decoration: none;
@@ -723,12 +730,10 @@ blockquote:after {
 }
 
 .project-title {
-  font-family: "Roboto Mono", monospace;
-  font-weight: 500;
-  font-size: 16px;
   color: #800020;
-  margin-bottom: 1rem;
   text-decoration: none;
+  position: relative;
+  width: fit-content;
 }
 
 .project-title::after {
@@ -738,7 +743,7 @@ blockquote:after {
   bottom: 0;
   width: 100%;
   height: 0.5px;
-  background: currentColor;
+  background: black;
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 250ms ease-in;
@@ -792,10 +797,10 @@ iframe {
 }
 
 .contact-title {
-  font-family: "Roboto Mono", monospace;
   font-weight: 900;
   font-size: 16px;
 }
+
 .image-div {
   max-width: 600px;
   margin: 0 auto;
@@ -826,7 +831,6 @@ iframe {
 /* Footer */
 
 .footer-content {
-  font-family: "Roboto Mono", monospace;
   font-weight: 300;
   display: flex;
   flex-direction: column;
@@ -848,7 +852,6 @@ iframe {
 }
 
 .designer {
-  font-family: "Roboto Mono", monospace;
   font-size: 1rem;
   font-weight: 600;
   margin-bottom: 1rem;
