--- a/css/style.css
+++ b/css/style.css
@@ -946,3 +946,623 @@ iframe {
     height: 80vh;
   }
 }
+
+
+/* Mobile */
+@media only screen and (max-width:450px) {
+  ::-webkit-scrollbar {
+    width: 1em
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 100vw;
+    margin-block: .5em
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #f1f1f1;
+    border: .25em solid #000;
+    border-radius: 100vw
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #800020;
+    border: .25em solid rgb(15, 15, 15)
+  }
+
+  @supports (scrollbar-color:red blue) {
+    * {
+      scrollbar-color: #f1f1f1 #800020;
+      scrollbar-width: thin
+    }
+  }
+}
+
+@media only screen and (max-width:450px) {
+  .App-logo {
+    cursor: pointer;
+    max-width: 100px;
+    margin: 0 auto;
+    margin-left: 2rem;
+    margin-top: 2.5rem;
+    display: inline
+  }
+
+  .logo-link {
+    display: inline-block;
+    width: 30%;
+    align-items: center
+  }
+
+  .navbar {
+    flex-direction: column;
+    position: relative;
+    padding: 5px
+  }
+
+  .menu div {
+    margin-bottom: 5px
+  }
+
+  .menu {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 35px
+  }
+
+  .list-item {
+    display: block;
+    padding: 20px 10px
+  }
+
+  .nav-list {
+    position: relative;
+    list-style-type: none;
+    margin: 0 auto;
+    text-align: center;
+    padding: 1%;
+    margin-top: 8%;
+    display: none
+  }
+
+  .list-item.contact a {
+    background-color: rgb(231, 231, 17);
+    border: none;
+    color: #000;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 16px
+  }
+
+  .active {
+    display: block
+  }
+
+  .extra {
+    display: none
+  }
+}
+
+@media only screen and (max-width:450px) {
+  .index-main {
+    height: 100vh !important
+  }
+
+  .landing-page {
+    display: none
+  }
+
+  .landing-page.mobile {
+    display: block
+  }
+
+  .landing-page.mobile img {
+    display: block;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 5px
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%
+  }
+}
+
+@media screen and (max-width:450px) {
+  .words-div {
+    padding: .5rem
+  }
+
+  .developer {
+    width: 350px;
+    margin-bottom: 3rem;
+    padding: auto
+  }
+
+  .about-page {
+    flex-direction: column;
+    max-width: 100%;
+    padding: 1rem;
+    height: auto
+  }
+
+  .biography-section {
+    font-family: "Roboto Mono", monospace;
+    font-size: 16px;
+    font-weight: 500;
+    max-width: 800px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center
+  }
+
+  .bio-image {
+    max-width: 100%;
+    margin: 0 auto;
+    height: auto;
+    padding: 5px;
+    display: block
+  }
+
+  .bio-image-laptop {
+    max-width: 400px;
+    margin: 0 auto;
+    height: auto;
+    padding: 5px;
+    display: none
+  }
+}
+
+@media only screen and (max-width:450px) {
+  .jumbotron {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 1rem;
+    margin-bottom: 5rem;
+    margin-top: 5rem;
+    border: 1px solid steelblue
+  }
+
+  .jumbotron p {
+    font-size: 1rem;
+    padding: 1rem;
+    width: 90%
+  }
+
+  .blockquote-div {
+    max-width: 100%;
+    margin: 0 auto;
+    position: relative
+  }
+
+  blockquote {
+    font-family: "Roboto Mono", monospace;
+    font-size: 16px;
+    position: relative;
+    width: 320px;
+    margin: 0 auto
+  }
+
+  blockquote:before {
+    position: absolute;
+    font-size: 6em;
+    line-height: 1;
+    top: 0;
+    left: 0;
+    content: "\201C";
+    color: #800020
+  }
+
+  blockquote:after {
+    position: absolute;
+    float: right;
+    font-size: 6em;
+    line-height: 1;
+    right: 0;
+    bottom: -.5em;
+    content: "\201D";
+    color: #800020
+  }
+
+  .blockquote-footer {
+    padding: 1em;
+    color: #800020;
+    font-size: 1rem;
+    font-weight: 900;
+    position: absolute;
+    bottom: 0;
+    right: 0
+  }
+
+  .blockquote-link {
+    text-decoration: none;
+    color: #000
+  }
+
+  .jumbotron-button {
+    color: #800020;
+    text-decoration: none
+  }
+
+  blockquote cite:before {
+    content: "\2013"
+  }
+}
+
+@media only screen and (max-width:450px) {
+  .exhibitions-info {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto;
+    height: auto;
+    padding: 2rem
+  }
+
+  .exhibitions-info section div {
+    padding-left: 0
+  }
+}
+
+@media only screen and (max-width:450px) {
+  .boy-fraternity-div {
+    font-family: "Roboto Mono", monospace;
+    font-weight: 600;
+    font-size: 16px;
+    max-width: 350px;
+    margin: 0 auto;
+    position: relative
+  }
+
+  .boy-fraternity-title {
+    color: #800020;
+    display: inline-block;
+    position: relative
+  }
+
+  .boy-fraternity-div p {
+    line-height: 2rem
+  }
+
+  .boy-fraternity-title.boys::after {
+    width: 60% !important
+  }
+
+  .main-exhibition {
+    height: 10vh
+  }
+
+  .carousel {
+    display: none
+  }
+
+  .mobile {
+    display: block;
+    padding: 10px;
+    margin-bottom: 2rem
+  }
+
+  .mobile li {
+    list-style: none
+  }
+
+  .carousel-image {
+    margin-bottom: 2rem
+  }
+}
+
+@media only screen and (max-width:450px) {
+  .contact-container {
+    max-width: 350px;
+    margin: 0 auto;
+    height: auto;
+    flex-direction: column
+  }
+
+  .image-div {
+    max-width: 350px;
+    margin: 0 auto;
+    margin-top: 2rem
+  }
+
+  .contact-main {
+    max-width: 350px;
+    margin: 0 auto
+  }
+}
+
+@media only screen and (max-width:450px) {
+  footer {
+    float: left
+  }
+}
+
+/* Tablet */
+
+@import url(https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap);
+
+@media all and (max-width:1020px) {
+  ::-webkit-scrollbar {
+    width: 1em
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 100vw;
+    margin-block: .5em
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #f1f1f1;
+    border: .25em solid #000;
+    border-radius: 100vw
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #800020;
+    border: .25em solid rgb(15, 15, 15)
+  }
+
+  @supports (scrollbar-color:red blue) {
+    * {
+      scrollbar-color: #f1f1f1 #800020;
+      scrollbar-width: thin
+    }
+  }
+}
+
+@media all and (max-width:1020px) {
+  .biography-section {
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem
+  }
+
+  .landing-page img {
+    max-width: 700px;
+    margin: 0 auto;
+    height: auto
+  }
+
+  .blockquote-div {
+    max-width: 100%;
+    margin: 0 auto;
+    position: relative;
+    padding: 50px
+  }
+}
+
+@media screen and (max-width:820px) {
+  .contact-container {
+    max-width: 750px;
+    margin: 0 auto;
+    height: auto;
+    flex-direction: column
+  }
+
+  .image-div {
+    max-width: 350px;
+    margin: 0 auto;
+    margin-top: 2rem
+  }
+
+  .contact-main {
+    max-width: 350px;
+    margin: 0 auto
+  }
+}
+
+@media only screen and (max-width:1200px) {
+  .App-logo {
+    cursor: pointer;
+    max-width: 100px;
+    margin: 0 auto;
+    margin-left: 2rem;
+    margin-top: 2.5rem;
+    display: inline
+  }
+
+  .logo-link {
+    display: inline-block;
+    width: 30%;
+    align-items: center
+  }
+
+  .navbar {
+    flex-direction: column;
+    position: relative;
+    padding: 5px;
+    width: 100%
+  }
+
+  .menu div {
+    margin-bottom: 5px
+  }
+
+  .menu {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 35px
+  }
+
+  .list-item {
+    display: block;
+    padding: 20px 10px
+  }
+
+  .nav-list {
+    position: relative;
+    list-style-type: none;
+    margin: 0 auto;
+    text-align: center;
+    padding: 1%;
+    margin-top: 8%;
+    display: none
+  }
+
+  .list-item.contact a {
+    background-color: rgb(231, 231, 17);
+    border: none;
+    color: #000;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 16px
+  }
+
+  .active {
+    display: block
+  }
+
+  .extra {
+    display: none
+  }
+}
+
+@media screen and (max-width:820px) {
+  .App-logo {
+    cursor: pointer;
+    max-width: 100px;
+    margin: 0 auto;
+    margin-left: 2rem;
+    margin-top: 2.5rem;
+    display: inline
+  }
+
+  .logo-link {
+    display: inline-block;
+    width: 30%;
+    align-items: center
+  }
+
+  .navbar {
+    flex-direction: column;
+    position: relative;
+    padding: 5px;
+    width: 100%
+  }
+
+  .menu div {
+    margin-bottom: 5px
+  }
+
+  .menu {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 35px
+  }
+
+  .list-item {
+    display: block;
+    padding: 20px 10px
+  }
+
+  .nav-list {
+    position: relative;
+    list-style-type: none;
+    margin: 0 auto;
+    text-align: center;
+    padding: 1%;
+    margin-top: 8%;
+    display: none
+  }
+
+  .list-item.contact a {
+    background-color: rgb(231, 231, 17);
+    border: none;
+    color: #000;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 16px
+  }
+
+  .active {
+    display: block
+  }
+
+  .extra {
+    display: none
+  }
+}
+
+@media only screen and (max-width:1200px) {
+  .bio-image-laptop {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    height: auto;
+    padding: 5px
+  }
+}
+
+@media screen and (max-width:768px) {
+  .exhibitions-info {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    height: auto;
+    width: 720px
+  }
+
+  .exhibitions-info section {
+    display: flex;
+    flex-direction: column;
+    max-width: 310px;
+    margin: 0 auto
+  }
+
+  .exhibitions-info section div {
+    margin-bottom: 2rem;
+    padding-left: .5rem
+  }
+}
+
+@media screen and (max-width:1200px) {
+  .exhibitions-info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    height: auto;
+    width: 720px
+  }
+
+  .exhibitions-info section {
+    display: flex;
+    flex-direction: column;
+    max-width: 310px;
+    margin: 0 auto
+  }
+
+  .exhibitions-info section div {
+    margin-bottom: 2rem;
+    padding-left: .5rem
+  }
+}
