--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,7 @@ main {
   height: auto;
   padding-top: 5rem;
   padding-bottom: 5rem;
+  height: 100vh;
 
 }
 
@@ -429,7 +430,7 @@ main {
 }
 
 .exhibition-title {
-  font-size: 20px;
+  font-size: 18px;
   margin-bottom: 1.5rem;
   text-decoration: none;
 }
@@ -445,6 +446,10 @@ main {
   color: #800020;
 }
 
+.exhibition-venue {
+  margin: 0;
+}
+
 hr {
   color: #800020 !important;
 }
@@ -456,8 +461,10 @@ hr {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 5rem;
   width: 100%;
   height: 100vh;
+padding-top: 5rem;
 }
 
 .carousel {
@@ -594,13 +601,15 @@ hr {
   align-items: center;
   justify-content: center;
   gap: 2rem;
- 
+  padding-top: 5rem;
+
 }
 
 .boy-fraternity-title {
   color: #800020;
   display: inline-block;
   position: relative;
+  max-width: 100%;
 }
 
 .boy-fraternity-title::after {
@@ -729,14 +738,9 @@ blockquote:after {
 .card-image {
   width: 100%;
   height: auto;
-  opacity: 0.5;
 }
 
-.card-image:hover {
-  opacity: 1;
-  border: 2px solid #800020;
 
-}
 
 
 .card-description {
@@ -784,7 +788,6 @@ blockquote:after {
 }
 
 .video-container {
-  background-color: #800020;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -793,6 +796,30 @@ blockquote:after {
 iframe {
   width: 700px;
   height: 400px;
+}
+
+
+.video-main {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  height: 100vh;
+  padding: 10rem;
+}
+
+.container-video {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.projects-video {
+  max-width: 350px !important;
+  height: 230px;
 }
 
 /* Contact Page */
