--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,5 @@
 /* Navbar */
-
-@media only screen and (max-width: 450px) {
+@media screen and (min-width: 450px) and (max-width: 1024px) {
   .App-logo {
     cursor: pointer;
     max-width: 100px;
@@ -88,7 +87,7 @@
 
   .landing-page.mobile img {
     padding: 0.5rem;
-    height: 450px;;
+    max-height: 450px;;
   }
 
   /* Main */
@@ -265,7 +264,6 @@
   }
 }
 
-@media screen and (min-width: 480px) {}
 
 @media only screen and (max-width: 450px) {}
 
@@ -337,6 +335,33 @@
   .carousel-image {
     margin-bottom: 2rem;
   }
+}
+
+@media screen and (max-width: 1020px) {
+  .carousel {
+    position: relative;
+    height: 400px;
+    width: 600px;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+    display: block;
+  }
+
+    .thelastburial-paragraph {
+      line-height: 2rem;
+      width: 100%;
+      padding: 2rem;
+    }
+    .main-exhibition {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+      width: 100%;
+      height: 80vh;
+      padding-top: 0;
+    }
 }
 
 /* Contact Page */
