--- a/css/mobile.css
+++ b/css/mobile.css
@@ -467,14 +467,36 @@
 /* Videos */
 
 @media only screen and (max-width: 450px) {
+  .video-main-container {
+    height: auto;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    padding: 1rem;
+  }
+
+  .video-container {
+        padding-bottom: 5rem;
+  }
+
   .video-main {
     display: flex;
     flex-direction: column;
     gap: 5rem;
+    padding: 0;
+    width: 100%;
     height: auto;
-    padding: 1rem;
     padding-top: 5rem;
     padding-bottom: 5rem;
+  }
+
+  .video-item {
+    padding: 0.1rem;
+    width: 100%;
+  }
+
+  iframe {
+    width: 100%;
+    height: 200px;
   }
 
   .container-video {
@@ -482,9 +504,11 @@
   }
 
   .projects-video {
-    max-width: 350px !important;
-    height: 230px;
+    max-width: 100% !important;
+    height: 200px;
   }
 }
+
+@media screen and (max-width: 1020px) {}
 
 @media only screen and (max-width: 450px) {}
