--- a/css/mobile.css
+++ b/css/mobile.css
@@ -226,11 +226,12 @@
 @media only screen and (max-width: 450px) {
 
   .blockquote-div {
-    max-width: 800px;
+    max-width: 100%;
     height: auto;
     margin: 0 auto;
     position: relative;
-    padding: 50px;
+    padding: 0;
+    text-align: center;
 
   }
 
@@ -238,7 +239,7 @@
     font-family: "Roboto Mono", monospace;
     font-size: 16px;
     position: relative;
-    width: 320px;
+    width:322px;
     margin: 0 auto;
     height: auto;
   }
@@ -475,7 +476,7 @@
   }
 
   .video-container {
-        padding-bottom: 5rem;
+    padding-bottom: 5rem;
   }
 
   .video-main {
